@@ -1,7 +1,10 @@
 04/09/2003 Bob Rossi <bob_rossi@cox.net>
 
     * Adding support for reading/writing of command history
+    * if tgdb_start fails, the driver cleans up before dying.
     * Set data state to USER_COMMAND before running TAB_COMPLETION
+    * Fixed reverse-search-histroy bug where readline would not 
+    run command searched for.
 
 04/08/2003 Bob Rossi <bob_rossi@cox.net>
 
